--- a/frontend/public/fonts/index.css
+++ b/frontend/public/fonts/index.css
@@ -1,29 +1,8 @@
 @font-face {
-  font-family: 'CircularStd';
-  font-weight: 400;
-  font-style: normal;
-  src: local('CircularStd'), url('CircularStd-Book.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'CircularStd';
-  font-weight: 500;
-  font-style: normal;
-  src: local('CircularStd'), url('CircularStd-Medium.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'CircularStd';
-  font-weight: 700;
-  font-style: normal;
-  src: local('CircularStd'), url('CircularStd-Bold.otf') format('opentype');
-}
-
-@font-face {
   font-family: 'SF Compact Display';
   font-style: normal;
   font-weight: 200;
-  src: url('sf-compact-display-thin-58646eb43a785.woff') format('woff');
+  src: url('SFCompactDisplay-Thin.woff') format('woff');
 }
 
 @font-face {
@@ -37,12 +16,12 @@
   font-family: 'SF Compact Display';
   font-style: normal;
   font-weight: 600;
-  src: url('sf-compact-display-medium-5864711817c30.woff') format('woff');
+  src: url('SFCompactDisplay-Medium.woff') format('woff');
 }
 
 @font-face {
   font-family: 'SF Compact Display';
   font-style: normal;
   font-weight: bold;
-  src: url('SF-Compact-Display-Bold.ttf');
+  src: url('SFCompactDisplay-Bold.ttf');
 }
