--- a/frontend/src/assets/css/app-styles.css
+++ b/frontend/src/assets/css/app-styles.css
@@ -163,6 +163,9 @@
 .text-right {
   text-align: right !important;
 }
+.text-underline {
+  text-decoration: underline;
+}
 .bg-white {
   background-color: white !important;
 }
@@ -261,6 +264,10 @@
 }
 .bottom-0 {
   bottom: 0 !important;
+}
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 .ant-layout-sider.main-menu,
 .ant-layout-sider.main-menu .ant-menu-light {
