--- a/frontend/src/assets/css/antd-overrides.css
+++ b/frontend/src/assets/css/antd-overrides.css
@@ -116,3 +116,11 @@ span.ant-tag {
   .ant-collapse-header-text {
   color: #893da0 !important;
 }
+
+.ant-collapse-header {
+  font-size: 16px;
+  font-weight: 600;
+}
+.ant-collapse-header .ant-collapse-header-text {
+  font-size: inherit;
+}
