--- a/frontend/src/assets/css/antd-overrides.css
+++ b/frontend/src/assets/css/antd-overrides.css
@@ -11,6 +11,10 @@
 .ant-btn {
   font-weight: 600;
 }
+.ant-btn:disabled {
+  opacity: 0.45;
+  pointer-events: none;
+}
 .ant-btn.ant-btn-info {
   color: white;
   background-color: rgb(0, 184, 217);
@@ -120,9 +124,15 @@ span.ant-tag {
 .ant-collapse-header {
   font-size: 16px;
   font-weight: 600;
+  pointer-events: none;
 }
 .ant-collapse-header .ant-collapse-header-text {
   font-size: inherit;
+  pointer-events: all;
+  flex: none !important;
+}
+.ant-collapse-header .ant-collapse-header-text:hover {
+  color: #893da0;
 }
 
 /* .automation-form .ant-row.ant-form-item-row .ant-form-item-label-left {
