Automation with steps and userlog with transparent cirlce

--- a/frontend/src/assets/css/app-styles.css
+++ b/frontend/src/assets/css/app-styles.css
@@ -428,7 +428,7 @@
 }
 
 /* ant steps */
-.ant-steps-item-title {
+/* .ant-steps-item-title {
   font-size: 20px !important;
 }
 .ant-steps
@@ -460,4 +460,4 @@
   inset-inline-start: 23px !important;
   height: 100px !important;
   top: 2px !important;
-}
+} */
