--- a/frontend/src/assets/css/app-styles.css
+++ b/frontend/src/assets/css/app-styles.css
@@ -43,6 +43,9 @@
 .pr-2 {
   padding-right: 1rem !important;
 }
+.pr-4 {
+  padding-right: 2rem !important;
+}
 .pb-1 {
   padding-bottom: 0.5rem !important;
 }
